Fix for bug 326994 (XMLSerializer adds namespace declaration for non-empty prefix with empty namespace name). r/sr=bz.